notionDBにjsonでレコードを追加するページを作成

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build:proj": "rimraf projects/$npm_config_proj/dist && tsc -p projects/$npm_config_proj && cpy projects/$npm_config_proj/src/appsscript.json projects/$npm_config_proj/dist/",
-    "push:proj": "npm run build:proj --proj=$npm_config_proj && cd projects/$npm_config_proj && npx clasp push",
+    "build:proj": "rimraf projects/$npm_config_proj/dist && tsc -p projects/$npm_config_proj && cpy projects/$npm_config_proj/src/appsscript.json projects/$npm_config_proj/dist/ && cpy projects/$npm_config_proj/src/*.html projects/$npm_config_proj/dist/",
+    "push:proj": "cd projects/$npm_config_proj && npx clasp push",
     "open:proj": "cd projects/$npm_config_proj && npx clasp open",
-    "build:notion2discord": "npm run build:proj --proj=notion-to-discord",
-    "push:notion2discord": "npm run push:proj --proj=notion-to-discord",
-    "open:notion2discord": "npm run open:proj --proj=notion-to-discord",
+    "build:notionToDiscord": "npm run build:proj --proj=notion-to-discord",
+    "push:notionToDiscord": "npm run push:proj --proj=notion-to-discord",
+    "open:notionToDiscord": "npm run open:proj --proj=notion-to-discord",
+    "build:schedule": "npm run build:proj --proj=schedule-add-for-notion",
+    "push:schedule": "npm run push:proj  --proj=schedule-add-for-notion",
+    "open:schedule": "npm run open:proj  --proj=schedule-add-for-notion",
     "build:all": "run-p build:notion",
     "push:all": "run-p push:notion"
   },
